--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+//gradle plugin "android"
+//overrides data in the Android manifest -> change here
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
@@ -20,13 +22,20 @@ android {
 }
 
 dependencies {
+    //include all jar files from Lib folder
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //sources needed for espresso UI tests
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    //"compile" -> sources needed to compile the whole project
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
+
+    //"testCompile" -> sources needed to compile the test of the project
     testCompile 'junit:junit:4.12'
 }
